tests/fail/expr/path.rs
fn main() {
    one_assert::assert!(std::vec);
    one_assert::assert!(std::f32::consts::PI);
}
