tests/fail/expr/path.stderr
error[E0423]: expected value, found module `std::vec`
 --> tests/fail/expr/path.rs:2:25
  |
2 |     one_assert::assert!(std::vec);
  |                         ^^^^^^^^ not a value

error[E0308]: mismatched types
 --> tests/fail/expr/path.rs:3:25
  |
3 |     one_assert::assert!(std::f32::consts::PI);
  |                         ^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `f32`
